--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ http://www.templatemo.com/tm-506-tinker
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top"><em>T</em>inker</a>
+                    <a href="#" class="navbar-brand scroll-top"><em>T</em>riveni</a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
