--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Tinker Template
 http://www.templatemo.com/tm-506-tinker
 -->
-        <title>Tinker CSS Template</title>
+        <title>Treveni Fole</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -350,16 +350,6 @@ http://www.templatemo.com/tm-506-tinker
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="map">
-    	<!-- How to change your own map point
-            1. Go to Google Maps
-            2. Click on your location point
-            3. Click "Share" and choose "Embed map" tab
-            4. Copy only URL and paste it within the src="" field below
-        -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.485196115994!2d103.85995441789784!3d1.2880401763270322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7fb4e58ad9cd826e!2sSingapore+Flyer!5e0!3m2!1sen!2sth!4v1505825620371" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
     <footer>
