--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ http://www.templatemo.com/tm-506-tinker
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2><em>TINKER</em> <span>HTML5</span> Template</h2>
-                <p>Tinker is free HTML CSS template from templatemo.com that can be used for any kind of website. Please tell your friends about us. Thank you.</p>
+                <h2>I dream my <em>painting </em> and I <span>paint</span> my dream.</h2>
+                <p>I am an excitable person who only understands life lyrically, musically, in whom feelings are much stronger as reason. I am so thirsty for the marvelous that only the marvelous has power over me. Anything I can not transform into something marvelous, I let go. Reality doesn't impress me. I only believe in intoxication, in ecstasy, and when ordinary life shackles me, I escape, one way or another. No more walls.</p>
                 <div class="primary-white-button">
                     <a href="#" class="scroll-link" data-id="about">Let's Start</a>
                 </div>
