--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ http://www.templatemo.com/tm-506-tinker
     </div>
 
 
-    <section id="about" class="page-section">
+    <!-- <section id="about" class="page-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -129,7 +129,7 @@ http://www.templatemo.com/tm-506-tinker
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="portfolio">
         <div class="content-wrapper">
@@ -139,8 +139,8 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="section-heading">
                             <h4>Our Gallery</h4>
                             <div class="line-dec"></div>
-                            <p>In malesuada placerat ligula et bibendum. Aenean eget urna enim. Sed enim ante, bibendum nec dictum ac, gravida ac lectus.</p>
-                            <div class="filter-categories">
+                            <p>If you ask me what I came to do in this world, I, an artist, will answer you: I am here to live out loud.Art and love are the same thing: It’s the process of seeing yourself in things that are not you.</p>
+                            <!-- <div class="filter-categories">
                                 <ul class="project-filter">
                                     <li class="filter" data-filter="all"><span>Show All</span></li>
                                     <li class="filter" data-filter="branding"><span>Branding</span></li>
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-506-tinker
                                     <li class="filter" data-filter="nature"><span>Nature</span></li>
                                     <li class="filter" data-filter="animation"><span>Animation</span></li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-md-8">
