--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ http://www.templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
+                        <!-- <li><a href="#" class="scroll-link" data-id="about">About Us</a></li> -->
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
-                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
+                        <!-- <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li> -->
                         <li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
                     </ul>
                 </div>
@@ -140,6 +140,13 @@ http://www.templatemo.com/tm-506-tinker
                             <h4>Our Gallery</h4>
                             <div class="line-dec"></div>
                             <p>If you ask me what I came to do in this world, I, an artist, will answer you: I am here to live out loud.Art and love are the same thing: It’s the process of seeing yourself in things that are not you.</p>
+                            <div class="col-md-8 col-sm-8 project-item mix graphic animation">
+                                <div class="thumb">
+                                    <div class="image">
+                                        <a href="img/Triv/profile.png" data-lightbox="image-1"><img src="img/Triv/profile.png" style="border-radius: 50%;"></a>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- <div class="filter-categories">
                                 <ul class="project-filter">
                                     <li class="filter" data-filter="all"><span>Show All</span></li>
@@ -155,45 +162,59 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="projects-holder-3">
                             <div class="projects-holder">
                                 <div class="row">
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
+                                    <div class="col-md-4 col-sm-4 project-item mix nature">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_01.jpg" data-lightbox="image-1"><img src="img/portfolio_item_01.jpg"></a>
+                                                <a href="img/Triv/1.jpg" data-lightbox="image-1"><img src="img/Triv/1.jpg"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix animation">
+                                    <div class="col-md-4 col-sm-4 project-item mix animation">
                                       <div class="thumb">
                                         <div class="image">
-                                                <a href="img/portfolio_big_item_02.jpg" data-lightbox="image-1"><img src="img/portfolio_item_02.jpg"></a>
+                                                <a href="img/Triv/2.jpg" data-lightbox="image-1"><img src="img/Triv/2.jpg"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
+                                    <div class="col-md-4 col-sm-4 project-item mix branding">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_03.jpg" data-lightbox="image-1"><img src="img/portfolio_item_03.jpg"></a>
+                                                <a href="img/Triv/3.jpg" data-lightbox="image-1"><img src="img/Triv/3.jpg"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic nature">
+                                    <div class="col-md-4 col-sm-4 project-item mix graphic nature">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_04.jpg" data-lightbox="image-1"><img src="img/portfolio_item_04.jpg"></a>
+                                                <a href="img/Triv/4.jpg" data-lightbox="image-1"><img src="img/Triv/4.jpg"></a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
+                                    <div class="col-md-4 col-sm-4 project-item mix branding">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_05.jpg" data-lightbox="image-1"><img src="img/portfolio_item_05.jpg"></a>
+                                                <a href="img/Triv/5.jpg" data-lightbox="image-1"><img src="img/Triv/5.jpg"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic animation">
+                                    <div class="col-md-4 col-sm-4 project-item mix graphic animation">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_06.jpg" data-lightbox="image-1"><img src="img/portfolio_item_06.jpg"></a>
+                                                <a href="img/Triv/6.jpg" data-lightbox="image-1"><img src="img/Triv/6.jpg"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 project-item mix graphic animation">
+                                        <div class="thumb">
+                                            <div class="image">
+                                                <a href="img/Triv/7.jpg" data-lightbox="image-1"><img src="img/Triv/7.jpg"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 project-item mix graphic animation">
+                                        <div class="thumb">
+                                            <div class="image">
+                                                <a href="img/Triv/8.jpg" data-lightbox="image-1"><img src="img/Triv/8.jpg"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -214,30 +235,23 @@ http://www.templatemo.com/tm-506-tinker
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Quisque ullamcorper odio a nisl lacinia dictum. Vestibulum malesuada ipsum in turpis finibus, ut sagittis erat scelerisque. Curabitur non risus fringilla libero accumsan molestie et quis justo. ”</p>
-                                <h4>George Rich</h4>
-                                <span>Web Designer</span>
+                                <p>“Art enables us to find ourselves and lose ourselves at the same time.”</p>
+                                <h4>Shree</h4>
+                                <span>Designer</span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Suspendisse magna mauris, convallis vel finibus eget, lobortis dictum neque. Nam tincidunt metus nec eros dignissim consectetur. ”</p>
-                                <h4>John Henry</h4>
-                                <span>New Manager</span>
+                                <p>“Painting is easy when you don’t know how, but very difficult when you do”</p>
+                                <h4>Edgar Degas</h4>
+                                <span>Designer</span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Aenean semper aliquam est ut maximus. Fusce id diam eget orci lobortis ultricies at ac velit. Curabitur laoreet massa et fringilla sagittis. ”</p>
-                                <h4>Danny Cute</h4>
+                                <p>“ As my artist’s statement explains, my work is utterly incomprehensible and is therefore full of deep significance ”</p>
+                                <h4>Calvin</h4>
                                 <span>CEO Founder</span>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimonials-item">
-                                <p>“ Maecenas eu odio pharetra, elementum lorem eget, efficitur erat. Duis eget justo non nisi iaculis vestibulum. Aliquam erat volutpat. ”</p>
-                                <h4>Richard Beal</h4>
-                                <span>CSS Developer</span>
                             </div>
                         </div>
                     </div>
@@ -246,7 +260,7 @@ http://www.templatemo.com/tm-506-tinker
         </div>
     </section>
 
-    <div class="tabs-content" id="blog">
+    <!-- <div class="tabs-content" id="blog">
         <div class="container">
             <div class="row">
                 <div class="wrapper">
@@ -302,7 +316,7 @@ http://www.templatemo.com/tm-506-tinker
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="contact-us">
         <div class="container">
@@ -311,7 +325,7 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="section-heading">
                         <h4>Contact Us</h4>
                         <div class="line-dec"></div>
-                        <p>Nunc posuere non quam at pharetra. Mauris tincidunt purus vel ultrices malesuada. Integer euismod erat ut nulla ultrices, ut auctor eros feugiat.</p>
+                        <p>Anybody can look at a pretty girl and see a pretty girl. An artist can look at a pretty girl and see the old woman she will become. A better artist can look at an old woman and see the pretty girl that she used to be. But a great artist-a master-and that is what Auguste Rodin was-can look at an old woman, protray her exactly as she is...and force the viewer to see the pretty girl she used to be...and more than that, he can make anyone with the sensitivity of an armadillo, or even you, see that this lovely young girl is still alive, not old and ugly at all, but simply prisoned inside her ruined body. He can make you feel the quiet, endless tragedy that there was never a girl born who ever grew older than eighteen in her heart...no matter what the merciless hours have done to her. Look at her, Ben. Growing old doesn't matter to you and me; we were never meant to be admired-but it does to them.</p>
                         <div class="pop-button">
                             <h4>Send us a message</h4>
                         </div>
@@ -357,30 +371,30 @@ http://www.templatemo.com/tm-506-tinker
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="logo">
-                        <a class="logo-ft scroll-top" href="#"><em>T</em>inker</a>
-                        <p>Copyright &copy; 2017 Your Company 
-                       <br>Design: templatemo</p>
+                        <a class="logo-ft scroll-top" href="#"><em>T</em>riveni Fole</a>
+                        <p>Copyright &copy; 2019
+                       <br>Design: Triveni</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="location">
                         <h4>Location</h4>
                         <ul>
-                            <li>30 Raffles Ave, <br>Singapore 039803</li>
-                            <li>1 Republic Blvd, <br>Singapore 038975</li>
+                            <li>Navle Bridge, <br>Pune 411041</li>
+                            <li>Near Manaji Nager, <br>Pune</li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-4 col-sm-12">
                     <div class="contact-info">
                         <h4>More Info</h4>
                         <ul>
-                            <li><em>Phone</em>: 090-090-0320</li>
-                            <li><em>Email</em>: tk@company.co</li>
+                            <li><em>Phone</em>: +91 7057228355</li>
+                            <li><em>Email</em>: trivenifole9092@gmail.com</li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <!-- <div class="col-md-2 col-sm-12">
                     <div class="connect-us">
                         <h4>Get Social with us</h4>
                         <ul>
@@ -391,7 +405,7 @@ http://www.templatemo.com/tm-506-tinker
                             <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
