--- a/index.html
+++ b/index.html
@@ -395,7 +395,14 @@ http://www.templatemo.com/tm-506-tinker
                                             </div>
                                         </div>
                                     </div>
-                                    
+
+                                    <div class="col-md-3 col-sm-3 project-item mix graphic animation">
+                                        <div class="thumb">
+                                            <div class="image">
+                                                <a href="img/Triv/28.jpg" data-lightbox="image-1"><img src="img/Triv/295.jpeg"></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
